# Genetic-Algorithms

./: .gitignore  README.md
Fachvortrag/: .gitignore  Präsentation Fachvortrag.pptx  arbeit.tex  ausarbeitung.tex  ausblick.tex  codierung.tex  einleitung.tex  einstellung_der_parameter.tex  es_vs_gen.tex  litverz.tex  mutation.tex  standard_es.tex  steuerung_der_evolution.tex  typisches_aussehen.tex
LaTeX Vorlage/: arbeit.tex  litverz.tex
Projektvortrag/: .gitignore  Präsentation Projektvortrag.pptx  ausarbeitung.tex  einfuehrung.tex  einführung.tex  entwurf.tex  experimente.tex  konzept.tex  litverz.tex  realisierung.tex  untersuchung.tex  (+2 more)
TSP/: .gitignore  CMakeLists.txt  README.md
TSP/data/cities/: att48_d.txt  att48_s.txt  att48_xy.txt  distances  labels
TSP/libs/catch/: catch.hpp
TSP/libs/matplotlib/: matplotlibcpp.h
TSP/python_example/: AlgorithmResolver.py  DataFileReader.py  Experiment0.py  Experiment1.py  Experiment2.py  Experiment3.py  Experiment4.py  Experiment5.py  Experiment6.py  Experiment7.py  Plotter.py  Position.py  README.txt  SimulationExecutor.py  SimulationResult.py  SimulationResultList.py  Simulation_Test.py  Simulator_Wrapper.pyd  TSP.py  tsp.py
TSP/python_example/enums/: FitnessConfig.py
TSP/python_wrapper/: Simulator_Wrapper.cpp
TSP/research/: main.cpp
TSP/src/genetic_algorithms/: crossover.cpp  crossover.h  marriage.cpp  marriage.h  mutation.cpp  mutation.h  selection.cpp  selection.h  utility.cpp  utility.h
TSP/src/individual/: Individual.cpp  Individual.h
TSP/src/population/: Population.cpp  Population.h
TSP/src/simulation/: Simulator.cpp  Simulator.h  simulation.cpp  simulation.h
TSP/src/util/: Random_Number_Generator.h  read_cities.cpp  read_cities.h
TSP/tests/: main.cpp
TSP/tests/genetic_algorithms/: test_crossover.cpp  test_marriage.cpp  test_mutation.cpp  test_selection.cpp  test_utility.cpp
TSP/tests/individual/: test_Individual.cpp
TSP/tests/population/: test_Population.cpp
TSP/tests/simulation/: test_Simulator.cpp  test_simulation.cpp
TSP/tests/util/: test_random_number_generator.cpp  test_util_read_cities.cpp
(+7 files in other folders)
